Regression: Crash when adding color attribute in edit mode #98673

Closed
opened 2022-06-08 17:00:37 +02:00 by Dvorakir · 16 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: 3.1

Caused by 3d5f5c2d9a

Short description of error
Adding a color attribute to a mesh from the Color Attribute panel causes a crash if the object is in edit mode.
A crash does not occur if a color type attribute is added manually from the Attributes panel

Exact steps for others to reproduce the error
Based on the default startup file:

  1. enter edit mode on the cube
  2. try adding a color attribute
  3. crash

blender_2022-06-08_16-58-25.mp4

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: 3.1 Caused by 3d5f5c2d9a **Short description of error** Adding a color attribute to a mesh from the Color Attribute panel causes a crash if the object is in edit mode. A crash does not occur if a color type attribute is added manually from the Attributes panel **Exact steps for others to reproduce the error** Based on the default startup file: 1. enter edit mode on the cube 2. try adding a color attribute 3. crash [blender_2022-06-08_16-58-25.mp4](https://archive.blender.org/developer/F13138594/blender_2022-06-08_16-58-25.mp4)
Author

Added subscriber: @Dvorakir

Added subscriber: @Dvorakir

#99160 was marked as duplicate of this issue

#99160 was marked as duplicate of this issue

#98819 was marked as duplicate of this issue

#98819 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, in debug build this triggers assert BLI_assert(me->edit_mesh == nullptr);

 	blender.exe!_BLI_assert_abort() Řádek 47	C
>	blender.exe!ED_mesh_color_ensure(Mesh * me, const char * name) Řádek 430	C++

 	blender.exe!vertex_color_set<blender::ColorSceneLinear4f<0>,blender::color::FloatTraits,0>(Object * ob, blender::ColorSceneLinear4f<0> paintcol_in, blender::ColorSceneLinear4f<0> * color_layer) Řádek 4104	C++
 	blender.exe!paint_object_attributes_active_color_fill_ex(Object * ob, blender::ColorSceneLinear4f<0> fill_color, bool only_selected) Řádek 4172	C++
 	blender.exe!BKE_object_attributes_active_color_fill(Object * ob, const float * fill_color, bool only_selected) Řádek 4200	C++
 	blender.exe!blender::ed::geometry::geometry_color_attribute_add_exec(bContext * C, wmOperator * op) Řádek 241	C++
 	blender.exe!wm_operator_exec(bContext * C, wmOperator * op, const bool repeat, const bool store) Řádek 1099	C++
 	blender.exe!WM_operator_call_ex(bContext * C, wmOperator * op, bool store) Řádek 1147	C++
 	blender.exe!dialog_exec_cb(bContext * C, void * arg1, void * arg2) Řádek 1427	C
 	blender.exe!ui_apply_but_funcs_after(bContext * C) Řádek 1038	C
 	blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Řádek 11522	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Řádek 732	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3166	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3285	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 3878	C++
 	blender.exe!WM_main(bContext * C) Řádek 626	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 551	C
 	[Externí kód]	
Can confirm, in debug build this triggers assert `BLI_assert(me->edit_mesh == nullptr);` ``` blender.exe!_BLI_assert_abort() Řádek 47 C > blender.exe!ED_mesh_color_ensure(Mesh * me, const char * name) Řádek 430 C++ blender.exe!vertex_color_set<blender::ColorSceneLinear4f<0>,blender::color::FloatTraits,0>(Object * ob, blender::ColorSceneLinear4f<0> paintcol_in, blender::ColorSceneLinear4f<0> * color_layer) Řádek 4104 C++ blender.exe!paint_object_attributes_active_color_fill_ex(Object * ob, blender::ColorSceneLinear4f<0> fill_color, bool only_selected) Řádek 4172 C++ blender.exe!BKE_object_attributes_active_color_fill(Object * ob, const float * fill_color, bool only_selected) Řádek 4200 C++ blender.exe!blender::ed::geometry::geometry_color_attribute_add_exec(bContext * C, wmOperator * op) Řádek 241 C++ blender.exe!wm_operator_exec(bContext * C, wmOperator * op, const bool repeat, const bool store) Řádek 1099 C++ blender.exe!WM_operator_call_ex(bContext * C, wmOperator * op, bool store) Řádek 1147 C++ blender.exe!dialog_exec_cb(bContext * C, void * arg1, void * arg2) Řádek 1427 C blender.exe!ui_apply_but_funcs_after(bContext * C) Řádek 1038 C blender.exe!ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) Řádek 11522 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Řádek 732 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3166 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3285 C++ blender.exe!wm_event_do_handlers(bContext * C) Řádek 3878 C++ blender.exe!WM_main(bContext * C) Řádek 626 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 551 C [Externí kód] ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-06-09 09:12:27 +02:00
Member

Will check

Will check
Philipp Oeser changed title from Crash when adding color attribute in edit mode to Regression: Crash when adding color attribute in edit mode 2022-06-09 10:11:24 +02:00

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Philipp Oeser removed their assignment 2022-06-23 18:31:12 +02:00
Member

I claimed this because I thought I had the fix already, turns out there might be a better way to do it.
Cannot tell if I can get a solution for 3.2.1, so will step down if others are quicker...

I claimed this because I thought I had the fix already, turns out there might be a better way to do it. Cannot tell if I can get a solution for 3.2.1, so will step down if others are quicker...
Member

Added subscriber: @Shady.Hamza

Added subscriber: @Shady.Hamza

This issue was referenced by 30273b86c7

This issue was referenced by 30273b86c7ffc79746d21952970fec25db523c1c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-06-27 02:11:53 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Mentioned the task and commit in corrective release list. Feel free to remove if fix is not appropriate for backporting

Mentioned the task and commit in corrective release list. Feel free to remove if fix is not appropriate for backporting

This issue was referenced by 4b7eaa709f

This issue was referenced by 4b7eaa709f73b43ca6b141be59f9c9b1e0950d8f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98673
No description provided.