Fix T98673: Color attribute fill API didn't support editmode